# LotteryBot

./: CMakeLists.txt
LotteryBot/: CMakeLists.txt  LotteryBot.cpp  core.cpp
LotteryBot/include/: config.h  core.h
LotteryBot/include/langsys/: english.h  german.h
